Source/WebCore/platform/graphics/avfoundation/MediaPlayerPrivateAVFoundation.h
@@ -35,8 +35,6 @@
 
 namespace WebCore {
 
-class ApplicationCacheResource;
-
 class MediaPlayerPrivateAVFoundation : public MediaPlayerPrivateInterface {
 public:
 
@@ -160,9 +158,6 @@ protected:
     virtual void createAVAssetForURL(const String&) = 0;
     virtual void createAVPlayer() = 0;
     virtual void createAVPlayerItem() = 0;
-#if ENABLE(OFFLINE_WEB_APPLICATIONS)
-    virtual void createAVAssetForCacheResource(ApplicationCacheResource*) = 0;
-#endif
 
     enum ItemStatus {
         MediaPlayerAVPlayerItemStatusDoesNotExist,
