Source/WebCore/platform/graphics/avfoundation/MediaPlayerPrivateAVFoundationObjC.h
@@ -51,8 +51,6 @@ typedef struct CGImage *CGImageRef;
 
 namespace WebCore {
 
-class ApplicationCacheResource;
-
 class MediaPlayerPrivateAVFoundationObjC : public MediaPlayerPrivateAVFoundation {
 public:
     ~MediaPlayerPrivateAVFoundationObjC();
@@ -90,9 +88,6 @@ private:
     virtual void createAVPlayer();
     virtual void createAVPlayerItem();
     virtual void createAVAssetForURL(const String& url);
-#if ENABLE(OFFLINE_WEB_APPLICATIONS)
-    virtual void createAVAssetForCacheResource(ApplicationCacheResource*);
-#endif
     virtual MediaPlayerPrivateAVFoundation::ItemStatus playerItemStatus() const;
     virtual MediaPlayerPrivateAVFoundation::AssetStatus assetStatus() const;
 
