Source/WebCore/platform/graphics/win/MediaPlayerPrivateQuickTimeVisualContext.cpp
@@ -28,8 +28,6 @@
 #if ENABLE(VIDEO)
 #include "MediaPlayerPrivateQuickTimeVisualContext.h"
 
-#include "ApplicationCacheHost.h"
-#include "ApplicationCacheResource.h"
 #include "Cookie.h"
 #include "CookieJar.h"
 #include "DocumentLoader.h"
@@ -374,15 +372,7 @@ void MediaPlayerPrivateQuickTimeVisualContext::loadInternal(const String& url)
 
     m_movie = adoptRef(new QTMovie(m_movieClient.get()));
 
-#if ENABLE(OFFLINE_WEB_APPLICATIONS)
-    Frame* frame = m_player->frameView() ? m_player->frameView()->frame() : 0;
-    ApplicationCacheHost* cacheHost = frame ? frame->loader()->documentLoader()->applicationCacheHost() : 0;
-    ApplicationCacheResource* resource = 0;
-    if (cacheHost && cacheHost->shouldLoadResourceFromApplicationCache(ResourceRequest(url), resource) && resource && !resource->path().isEmpty())
-        m_movie->load(resource->path().characters(), resource->path().length(), m_player->preservesPitch());
-    else
-#endif
-        m_movie->load(url.characters(), url.length(), m_player->preservesPitch());
+    m_movie->load(url.characters(), url.length(), m_player->preservesPitch());
     m_movie->setVolume(m_player->volume());
 }
 
